Ran tests, debugged, test 1 for infix_10 now pass

--- a/p2/Makefile
+++ b/p2/Makefile
@@ -4,11 +4,15 @@ CFLAGS = -Wall -std=c99 -g
 all: infix_10 infix_12
 
 infix_10: infix.o number_10.o operation.o
-infix_12: infix.o number_12.o operation.o
+	gcc -Wall -std=c99  -g infix.o number_10.o operation.o -o infix_10
 
 infix.o: infix.c number.h operation.h
 number_10.o: number_10.c number.h operation.h
 operation.o: operation.c operation.h
+
+infix_12: infix.o number_12.o operation.o
+	gcc -Wall -std=c99 -g infix.o number_12.o operation.o -o infix_12
+
 number_12.o: number_12.c number.h operation.h
 
 clean:
@@ -18,3 +22,4 @@ clean:
 	rm -f infix.o
 	rm -f infix_10
 	rm -f infix_12
+	rm -f output.txt
