Finished implementing through aesTest up to unShiftRows

--- a/p5/Makefile
+++ b/p5/Makefile
@@ -4,4 +4,14 @@ CFLAGS = -Wall -std=c99 -g
 fieldTest: fieldTest.o field.o
 	gcc -Wall -std=c99  -g fieldTest.o field.o -o fieldTest
 
-fieldTest.o: fieldTest.c field.c field.h
+aesTest: aesTest.o aes.o fieldTest.o
+	gcc -Wall -std=c99 -g aesTest.o aes.o field.o -o aesTest
+
+aesTest.o: aesTest.c aes.h
+
+aes.o: aes.c aes.h field.h io.h
+
+fieldTest.o: fieldTest.c field.h
+
+field.o: field.c field.h io.h
+
